replace user response when get all
